Clase Point2f acabada

--- a/Clase 20-02-2015/Clase 20-02-2015/Clase 20-02-2015.vcxproj
+++ b/Clase 20-02-2015/Clase 20-02-2015/Clase 20-02-2015.vcxproj
@@ -69,6 +69,10 @@
   <ItemGroup>
     <ClInclude Include="Point2f.h" />
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Point2f.cpp" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
