clase String acabada

--- a/Cadena/Cadena/Cadena/Cadena.vcxproj
+++ b/Cadena/Cadena/Cadena/Cadena.vcxproj
@@ -68,6 +68,10 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Cadena.cpp" />
+    <ClCompile Include="Main.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="CodeStyle.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
