--- a/Cadena/Cadena/UnitTest1/UnitTest1.vcxproj.filters
+++ b/Cadena/Cadena/UnitTest1/UnitTest1.vcxproj.filters
@@ -26,7 +26,7 @@
     <ClCompile Include="stdafx.cpp">
       <Filter>Archivos de código fuente</Filter>
     </ClCompile>
-    <ClCompile Include="unittest1.cpp">
+    <ClCompile Include="TestClaseString.cpp">
       <Filter>Archivos de código fuente</Filter>
     </ClCompile>
   </ItemGroup>
