--- a/Clase 06-03-2015/Clase 06-03-2015/Clase 06-03-2015.vcxproj.filters
+++ b/Clase 06-03-2015/Clase 06-03-2015/Clase 06-03-2015.vcxproj.filters
@@ -19,4 +19,9 @@
       <Filter>Archivos de recursos</Filter>
     </Text>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="ClassList.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
+  </ItemGroup>
 </Project>
