--- a/Clase 06-03-2015/Clase 06-03-2015/Clase 06-03-2015.vcxproj
+++ b/Clase 06-03-2015/Clase 06-03-2015/Clase 06-03-2015.vcxproj
@@ -66,6 +66,9 @@
   <ItemGroup>
     <Text Include="Text.txt" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="ClassList.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
